--- a/example.env
+++ b/example.env
@@ -1,3 +1,5 @@
 CLIENT_ID="YOUR CLIENT_ID"
 CLIENT_SECRET="YOUR CLIENT_SECRET"
 REDIRECT_URI="YOUR REDIRECT_URI"
+AWS_ACCESS_KEY="YOUR_AWS_ACCESS_KEY"
+AWS_ACCESS_SECRET_KEY="YOUR_AWS_ACCESS_SECRET_KEY"
