--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ certifi==2023.7.22
 charset-normalizer==3.2.0
 idna==3.4
 python-dotenv==1.0.0
+pandas==2.1.2
 redis==5.0.0
 regex==2023.8.8
 requests==2.31.0
