--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,5 @@
-certifi==2023.7.22
-charset-normalizer==3.2.0
-idna==3.4
+boto3==1.28.75
+botocore==1.31.75
 python-dotenv==1.0.0
 pandas==2.1.2
-redis==5.0.0
-regex==2023.8.8
-requests==2.31.0
-six==1.16.0
 spotipy==2.23.0
-urllib3==2.0.4
