--- a/.github/workflows/lambda-deploy.yml
+++ b/.github/workflows/lambda-deploy.yml
@@ -23,5 +23,6 @@ jobs:
             
             - name: 'Deploy Lambda test1'
               run: |
-                zip -r lambda_test.zip /src/cloud/lambdas/test/
+                cd src/cloud/lambdas/test/
+                zip -r lambda_test.zip .
                 aws lambda update-function-code --function-name lambda_test --zip-file fileb://lambda_test.zip
