--- a/.github/workflows/lambda-deploy.yml
+++ b/.github/workflows/lambda-deploy.yml
@@ -4,7 +4,9 @@ on:
     push:
       branches:
         - main
-        - ci/cd # for testing.
+        - ci/cd # for testing
+      paths:
+        - 'src/cloud/lambdas/**' # we weploy if there were changes in this files.
 
 jobs:
     deploy:
@@ -21,20 +23,20 @@ jobs:
                 aws-secret-access-key: ${{ secrets.AWS_ACCESS_SECRET_KEY }}
                 aws-region: 'sa-east-1'
             
-            - name: 'Deploy Lambda Extract' # This one is working.
+            - name: 'Deploy Lambda Extract Test'
               run: |
                 cd src/cloud/lambdas/test/
                 zip -r lambda_test.zip .
                 aws lambda update-function-code --function-name lambda_test --zip-file fileb://lambda_test.zip
             
-            - name: 'Deploy Lambda Transform'
-              run: |
-                cd src/cloud/lambdas/test/
-                zip -r lambda_test.zip .
-                aws lambda update-function-code --function-name lambda_test --zip-file fileb://lambda_test.zip
+            # - name: 'Deploy Lambda Transform'
+            #   run: |
+            #     cd src/cloud/lambdas/test/
+            #     zip -r lambda_test.zip .
+            #     aws lambda update-function-code --function-name lambda_test --zip-file fileb://lambda_test.zip
             
-            - name: 'Deploy Lambda Load'
-              run: |
-                cd src/cloud/lambdas/test/
-                zip -r lambda_test.zip .
-                aws lambda update-function-code --function-name lambda_test --zip-file fileb://lambda_test.zip
+            # - name: 'Deploy Lambda Load'
+            #   run: |
+            #     cd src/cloud/lambdas/test/
+            #     zip -r lambda_test.zip .
+            #     aws lambda update-function-code --function-name lambda_test --zip-file fileb://lambda_test.zip
