--- a/.github/workflows/lambda-deploy.yml
+++ b/.github/workflows/lambda-deploy.yml
@@ -6,7 +6,7 @@ on:
         - main
         - ci/cd # for testing
       paths:
-        - 'src/cloud/lambdas/**' # we weploy if there were changes in this files.
+        - 'src/cloud/lambdas/**' # Deploy iif there were changes on the lambdas folder
 
 jobs:
     deploy:
@@ -22,20 +22,26 @@ jobs:
                 aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
                 aws-secret-access-key: ${{ secrets.AWS_ACCESS_SECRET_KEY }}
                 aws-region: 'sa-east-1'
-            
-            - name: 'Deploy Lambda Extract Test'
+           
+            - name: 'Update Lambda: Recently Played'
               run: |
-                cd src/cloud/lambdas/test/
-                zip -r lambda_test.zip .
-                aws lambda update-function-code --function-name lambda_test --zip-file fileb://lambda_test.zip
+                cd src/cloud/lambdas/recently_played/
+                zip -r recently_played.zip .
+                aws lambda update-function-code --function-name recently_played_songs_test --zip-file fileb://recently_played.zip
+                
+            - name: 'Update Lambda: Extract'
+              run: |
+                cd src/cloud/lambdas/etl/extract
+                zip -r extract.zip .
+                aws lambda update-function-code --function-name spotify_etl_extract --zip-file fileb://extract.zip
             
-            # - name: 'Deploy Lambda Transform'
+            # - name: 'Update Lambda: Transform'
             #   run: |
             #     cd src/cloud/lambdas/test/
             #     zip -r lambda_test.zip .
             #     aws lambda update-function-code --function-name lambda_test --zip-file fileb://lambda_test.zip
             
-            # - name: 'Deploy Lambda Load'
+            # - name: 'Update Lambda: Load'
             #   run: |
             #     cd src/cloud/lambdas/test/
             #     zip -r lambda_test.zip .
