change workflows names a bit, remove ci/cd branch from deploy. Gotta fix the leaks.

--- a/.github/workflows/crawler.yml
+++ b/.github/workflows/crawler.yml
@@ -1,10 +1,9 @@
-name: Deploy Spotify Crawler
+name: Deploy Spotify Crawler Lambda Function
 
 on:
     push:
       branches:
         - main
-        - ci/cd # for testing
       paths:
         - 'src/cloud/lambdas/recently_played/**'
 
